--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -10,7 +11,8 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "sass": "^1.43.5"
+    "sass": "^1.43.5",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
