--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "darkmode-js": "^1.5.7",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "react": "^17.0.2",
